--- a/CS_Analysis.ipynb
+++ b/CS_Analysis.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -115,9 +115,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Subject ID</th>\n",
-       "      <th>First Name</th>\n",
-       "      <th>Last Name</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>Date of Birth</th>\n",
@@ -125,6 +122,9 @@
        "      <th>Education</th>\n",
        "      <th>Height (inch)</th>\n",
        "      <th>Weight (lb)</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Family History (AD/PD or &gt;90)</th>\n",
+       "      <th>Reason for exclusion</th>\n",
        "      <th>...</th>\n",
        "      <th>Alcohol - Number of Uses in Past 30 Days</th>\n",
        "      <th>Cannabis Age of First Use</th>\n",
@@ -141,14 +141,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>FFMRI_25 (A An 1)</td>\n",
-       "      <td>Andrea</td>\n",
-       "      <td>Antal</td>\n",
        "      <td>1.0</td>\n",
        "      <td>19.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>English</td>\n",
        "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
@@ -165,14 +165,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>FFMRI_45 JMo #2</td>\n",
-       "      <td>Jaideep</td>\n",
-       "      <td>Monga</td>\n",
        "      <td>2.0</td>\n",
        "      <td>25.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>English</td>\n",
        "      <td>19.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
@@ -189,14 +189,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>FFMRI_41 IDi #3</td>\n",
-       "      <td>Ibragim</td>\n",
-       "      <td>Dibirov</td>\n",
        "      <td>2.0</td>\n",
        "      <td>20.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>English</td>\n",
        "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
@@ -213,14 +213,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>LCa #4</td>\n",
-       "      <td>Lorenzo</td>\n",
-       "      <td>Carrara</td>\n",
        "      <td>2.0</td>\n",
        "      <td>18.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>English</td>\n",
        "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
@@ -237,14 +237,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(FFMRI_55) ATu #5</td>\n",
-       "      <td>Anders</td>\n",
-       "      <td>Turim</td>\n",
        "      <td>2.0</td>\n",
        "      <td>18.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>English</td>\n",
        "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
@@ -261,30 +261,30 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 195 columns</p>\n",
+       "<p>5 rows × 192 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Subject ID First Name Last Name  Sex   Age Date of Birth Language  \\\n",
-       "0  FFMRI_25 (A An 1)     Andrea     Antal  1.0  19.0           NaN  English   \n",
-       "1   FFMRI_45 JMo #2     Jaideep     Monga  2.0  25.0           NaN  English   \n",
-       "2    FFMRI_41 IDi #3   Ibragim    Dibirov  2.0  20.0           NaN  English   \n",
-       "3             LCa #4   Lorenzo    Carrara  2.0  18.0           NaN  English   \n",
-       "4  (FFMRI_55) ATu #5     Anders     Turim  2.0  18.0           NaN  English   \n",
+       "   Sex   Age Date of Birth Language  Education  Height (inch)  Weight (lb)  \\\n",
+       "0  1.0  19.0           NaN  English       14.0            NaN          NaN   \n",
+       "1  2.0  25.0           NaN  English       19.0            NaN          NaN   \n",
+       "2  2.0  20.0           NaN  English       15.0            NaN          NaN   \n",
+       "3  2.0  18.0           NaN  English       12.0            NaN          NaN   \n",
+       "4  2.0  18.0           NaN  English       13.0            NaN          NaN   \n",
        "\n",
-       "   Education  Height (inch)  Weight (lb)  ...    \\\n",
-       "0       14.0            NaN          NaN  ...     \n",
-       "1       19.0            NaN          NaN  ...     \n",
-       "2       15.0            NaN          NaN  ...     \n",
-       "3       12.0            NaN          NaN  ...     \n",
-       "4       13.0            NaN          NaN  ...     \n",
+       "   BMI Family History (AD/PD or >90)  Reason for exclusion  ...    \\\n",
+       "0  NaN                           NaN                   NaN  ...     \n",
+       "1  NaN                           NaN                   NaN  ...     \n",
+       "2  NaN                           NaN                   NaN  ...     \n",
+       "3  NaN                           NaN                   NaN  ...     \n",
+       "4  NaN                           NaN                   NaN  ...     \n",
        "\n",
-       "   Alcohol - Number of Uses in Past 30 Days Cannabis Age of First Use  \\\n",
-       "0                                       5.0                      14.0   \n",
-       "1                                       0.0                       NaN   \n",
-       "2                                       6.0                      15.0   \n",
-       "3                                       7.0                       NaN   \n",
-       "4                                       7.0                      15.0   \n",
+       "   Alcohol - Number of Uses in Past 30 Days  Cannabis Age of First Use  \\\n",
+       "0                                       5.0                       14.0   \n",
+       "1                                       0.0                        NaN   \n",
+       "2                                       6.0                       15.0   \n",
+       "3                                       7.0                        NaN   \n",
+       "4                                       7.0                       15.0   \n",
        "\n",
        "   Cannabis Number of Lifetime Uses  Cannabis Number of Uses in Past 30 Days  \\\n",
        "0                             350.0                                     10.0   \n",
@@ -314,10 +314,10 @@
        "3                              15.0                49.0   86.0  \n",
        "4                              13.0                47.0   96.0  \n",
        "\n",
-       "[5 rows x 195 columns]"
+       "[5 rows x 192 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,6 +325,7 @@
    "source": [
     "creativity_data = pd.read_excel('creativity_study_no_formatting.xlsx')\n",
     "creativity_data.replace('.', 'NaN')\n",
+    "creativity_data = creativity_data.drop(['Subject ID', 'First Name', 'Last Name'], axis=1)\n",
     "creativity_data.head()"
    ]
   },
